# jsk_dynarm_robot

./: .rosinstall  CMakeLists.txt  README.md  package.xml
config/: Battery.yaml  ManipulatorControl.yaml  ManipulatorModel.yaml  MotorInfo.yaml  RvizInit.yaml  Servo.yaml  Simulation.yaml  StateEstimation.yaml  rviz_config  urdf.rviz
include/dynarm/control/: manipulator_controller.h
include/dynarm/model/: manipulator_model.h
launch/: bringup.launch  demo.launch
meshes/: gimbal1_pitch_link.STL  gimbal1_roll_link.STL  gimbal2_pitch_link.STL  gimbal2_roll_link.STL  gimbal3_pitch_link.STL  gimbal3_roll_link.STL  gimbal4_pitch_link.STL  gimbal4_roll_link.STL  link0_yaw.STL  link1.STL  link2.STL  link3.STL  link4.STL  thrust1.STL  thrust2.STL  thrust3.STL  thrust4.STL  thrust5.STL  thrust6.STL  thrust7.STL  thrust8.STL
plugins/: control_plugin.xml  model_plugin.xml
robots/: dynarm.gazebo.xacro  dynarm.urdf.xacro
scripts/: root_fix.py  transform_demo.py
src/control/: manipulator_controller.cpp
src/model/: manipulator_model.cpp
urdf/: README.md  common.xacro  dynarm_all.xacro  gazebo.xacro
urdf/raw_data/: .gitignore  actuator_all.csv  all_mass_props_from_solidworks.txt  dynarm.urdf
urdf/scripts/: parse_actuators_for_gazebo.py  remove_collision.py  update_actuator_limits_and_dynamics.py  update_mass_props.py  urdf_utils.py
